--- a/index.html
+++ b/index.html
@@ -209,17 +209,18 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
+            I'm Creative Director and UI/UX Designer from West Bengal, India, working in web development.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
+            also have interest in solo traveling, making new friends.
           </p>
 
           <p>
             My job is to build your website so that it is functional and user-friendly but at the same time attractive.
             Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
+            add personal touch to products and make sure that is eye-catching and easy to use. My aim is to bring
             across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            message and identity in the most creative way. I created web sites in raw php, Laravel, Codeignighter, Wordpress, Whoocommers.
           </p>
         </section>
 
@@ -245,7 +246,8 @@
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  The most modern and high-quality responsive Mobile friendly design made at a professional level.
+                  also using css frameworks like bootstrap and tailwind.
                 </p>
               </div>
 
@@ -258,10 +260,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Back end development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  High-quality PHP backend development with frameworks like laravel.
                 </p>
               </div>
 
@@ -274,10 +276,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Responsive web app</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Professional responsive development web apps.
                 </p>
               </div>
 
@@ -289,13 +291,13 @@
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
               </div>
 
-              <div class="service-content-box">
+<!--               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
                   I make high-quality photos of any category at a professional level.
                 </p>
-              </div>
+              </div> -->
 
             </li>
 
@@ -321,15 +323,13 @@
                   <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>siddharth chaudhary</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Akash was hired to create a Web App. We were very pleased with the work done. He has a
+                    good experience
+                    and is very concerned about the needs of client. also he is very good in team management, communicate.
                   </p>
                 </div>
 
@@ -343,15 +343,11 @@
                   <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Poulami Naha</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    very good to work with akash. he have good skills and good to implementation of ideas.
                   </p>
                 </div>
 
@@ -365,15 +361,11 @@
                   <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>WMSN</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                   WMSN is thrilled with Akash's web development skills. He delivered a fantastic website on time and exceeded expectations with his expertise and communication. We highly recommend him!
                   </p>
                 </div>
 
