--- a/index.html
+++ b/index.html
@@ -285,21 +285,21 @@
 
             </li>
 
-            <li class="service-item">
+<!--             <li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
               </div>
 
-<!--               <div class="service-content-box">
+              <div class="service-content-box">
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
                   I make high-quality photos of any category at a professional level.
                 </p>
-              </div> -->
+              </div>
 
-            </li>
+            </li> -->
 
           </ul>
 
@@ -372,7 +372,7 @@
               </div>
             </li>
 
-            <li class="testimonials-item">
+<!--             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
@@ -392,7 +392,7 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
           </ul>
 
