--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from West Bengal, India, working in web development.
+            I'm full stack web developer in PHP from West Bengal, India, working Freelancer.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
             also have interest in solo traveling, making new friends.
