--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
             across your
             message and identity in the most creative way. I created web sites in raw php, Laravel, Codeignighter, Wordpress, Whoocommers.
           </p>
+          <p>
+            Currently working on my new portfolio😉
+          </p>
         </section>
 
 
